--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -201,6 +201,7 @@
     flex-direction: column;
     row-gap: 2rem;
     justify-content: center;
+    background-color: #888994;
   }
 
   .menu a {
